[gd_scene load_steps=7 format=3 uid="uid://c2klvq76r06w5"]

[ext_resource type="Script" path="res://settings/video.gd" id="1_3sx27"]
[ext_resource type="Script" path="res://main_menu/options_button.gd" id="1_sxvxs"]
[ext_resource type="Script" path="res://settings/audio.gd" id="2_6tet0"]
[ext_resource type="Script" path="res://main_menu/quit_button.gd" id="2_bgcrt"]
[ext_resource type="PackedScene" uid="uid://i1htnpspyp8s" path="res://settings/action_button.tscn" id="3_yg4sg"]
[ext_resource type="Script" path="res://settings/options_back_button.gd" id="5_kiwst"]

[node name="TestScene" type="Node2D"]

[node name="UI" type="CanvasLayer" parent="."]

[node name="MainMenu" type="VBoxContainer" parent="UI"]
unique_name_in_owner = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -35.0
offset_top = -50.5
offset_right = 35.0
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2

[node name="Start" type="Button" parent="UI/MainMenu"]
layout_mode = 2
text = "Start"

[node name="Options" type="Button" parent="UI/MainMenu"]
layout_mode = 2
text = "Options"
script = ExtResource("1_sxvxs")

[node name="Quit" type="Button" parent="UI/MainMenu"]
layout_mode = 2
text = "Quit"
script = ExtResource("2_bgcrt")

[node name="Settings" type="TabContainer" parent="UI"]
unique_name_in_owner = true
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Video" type="TabBar" parent="UI/Settings"]
layout_mode = 2
script = ExtResource("1_3sx27")

[node name="HBoxContainer" type="HBoxContainer" parent="UI/Settings/Video"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="VideoLabels" type="VBoxContainer" parent="UI/Settings/Video/HBoxContainer"]
layout_mode = 2

[node name="FullScreen" type="Label" parent="UI/Settings/Video/HBoxContainer/VideoLabels"]
layout_mode = 2
text = "Fullscreen"

[node name="Borderless" type="Label" parent="UI/Settings/Video/HBoxContainer/VideoLabels"]
layout_mode = 2
text = "Borderless
"

[node name="Vsync" type="Label" parent="UI/Settings/Video/HBoxContainer/VideoLabels"]
layout_mode = 2
text = "Vsync"

[node name="VideoButtons" type="VBoxContainer" parent="UI/Settings/Video/HBoxContainer"]
layout_mode = 2

[node name="FullScreen" type="CheckBox" parent="UI/Settings/Video/HBoxContainer/VideoButtons"]
unique_name_in_owner = true
layout_mode = 2

[node name="Borderless" type="CheckBox" parent="UI/Settings/Video/HBoxContainer/VideoButtons"]
unique_name_in_owner = true
layout_mode = 2

[node name="Vsync" type="OptionButton" parent="UI/Settings/Video/HBoxContainer/VideoButtons"]
unique_name_in_owner = true
layout_mode = 2
item_count = 4
selected = 0
popup/item_0/text = "Disabled"
popup/item_0/id = 0
popup/item_1/text = "Enabled"
popup/item_1/id = 1
popup/item_2/text = "Adaptive"
popup/item_2/id = 2
popup/item_3/text = "Mailbox"
popup/item_3/id = 3

[node name="Back" type="Button" parent="UI/Settings/Video"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -45.0
offset_top = -31.0
grow_horizontal = 0
grow_vertical = 0
text = "Back"
script = ExtResource("5_kiwst")

[node name="Audio" type="TabBar" parent="UI/Settings"]
visible = false
layout_mode = 2
script = ExtResource("2_6tet0")

[node name="HBoxContainer" type="HBoxContainer" parent="UI/Settings/Audio"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -79.5
offset_top = -38.5
offset_right = 79.5
offset_bottom = 38.5
grow_horizontal = 2
grow_vertical = 2

[node name="AudioLabels" type="VBoxContainer" parent="UI/Settings/Audio/HBoxContainer"]
layout_mode = 2

[node name="Master" type="Label" parent="UI/Settings/Audio/HBoxContainer/AudioLabels"]
layout_mode = 2
text = "Master"

[node name="Music" type="Label" parent="UI/Settings/Audio/HBoxContainer/AudioLabels"]
layout_mode = 2
text = "Music"

[node name="SFX" type="Label" parent="UI/Settings/Audio/HBoxContainer/AudioLabels"]
layout_mode = 2
text = "SFX"

[node name="AudioControls" type="VBoxContainer" parent="UI/Settings/Audio/HBoxContainer"]
custom_minimum_size = Vector2(100, 2.08165e-12)
layout_mode = 2

[node name="Master" type="HSlider" parent="UI/Settings/Audio/HBoxContainer/AudioControls"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 6
max_value = 1.0
step = 0.05

[node name="Music" type="HSlider" parent="UI/Settings/Audio/HBoxContainer/AudioControls"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 6
max_value = 1.0
step = 0.05

[node name="SFX" type="HSlider" parent="UI/Settings/Audio/HBoxContainer/AudioControls"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 6
max_value = 1.0
step = 0.05

[node name="Back" type="Button" parent="UI/Settings/Audio"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -45.0
offset_top = -31.0
grow_horizontal = 0
grow_vertical = 0
text = "Back"
script = ExtResource("5_kiwst")

[node name="Controls" type="TabBar" parent="UI/Settings"]
visible = false
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="UI/Settings/Controls"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -24.5
offset_top = -58.0
offset_right = 24.5
offset_bottom = 58.0
grow_horizontal = 2
grow_vertical = 2

[node name="ControlLabels" type="VBoxContainer" parent="UI/Settings/Controls/HBoxContainer"]
layout_mode = 2

[node name="Up" type="Label" parent="UI/Settings/Controls/HBoxContainer/ControlLabels"]
layout_mode = 2
size_flags_vertical = 6
text = "Up"

[node name="Down" type="Label" parent="UI/Settings/Controls/HBoxContainer/ControlLabels"]
layout_mode = 2
size_flags_vertical = 6
text = "Down"

[node name="Left" type="Label" parent="UI/Settings/Controls/HBoxContainer/ControlLabels"]
layout_mode = 2
size_flags_vertical = 6
text = "Left"

[node name="Right" type="Label" parent="UI/Settings/Controls/HBoxContainer/ControlLabels"]
layout_mode = 2
size_flags_vertical = 6
text = "Right"

[node name="ControlsButtons" type="VBoxContainer" parent="UI/Settings/Controls/HBoxContainer"]
custom_minimum_size = Vector2(100, 2.08165e-12)
layout_mode = 2

[node name="ActionButton" parent="UI/Settings/Controls/HBoxContainer/ControlsButtons" instance=ExtResource("3_yg4sg")]
layout_mode = 2
size_flags_vertical = 7

[node name="ActionButton2" parent="UI/Settings/Controls/HBoxContainer/ControlsButtons" instance=ExtResource("3_yg4sg")]
layout_mode = 2
size_flags_vertical = 7
action = "ui_down"

[node name="ActionButton3" parent="UI/Settings/Controls/HBoxContainer/ControlsButtons" instance=ExtResource("3_yg4sg")]
layout_mode = 2
size_flags_vertical = 7
action = "ui_left"

[node name="ActionButton4" parent="UI/Settings/Controls/HBoxContainer/ControlsButtons" instance=ExtResource("3_yg4sg")]
layout_mode = 2
size_flags_vertical = 7
action = "ui_right"

[node name="Back" type="Button" parent="UI/Settings/Controls"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -45.0
offset_top = -31.0
grow_horizontal = 0
grow_vertical = 0
text = "Back"
script = ExtResource("5_kiwst")

[connection signal="pressed" from="UI/MainMenu/Options" to="UI/MainMenu/Options" method="_on_pressed"]
[connection signal="pressed" from="UI/MainMenu/Quit" to="UI/MainMenu/Quit" method="_on_pressed"]
[connection signal="toggled" from="UI/Settings/Video/HBoxContainer/VideoButtons/FullScreen" to="UI/Settings/Video" method="_on_full_screen_toggled"]
[connection signal="toggled" from="UI/Settings/Video/HBoxContainer/VideoButtons/Borderless" to="UI/Settings/Video" method="_on_borderless_toggled"]
[connection signal="item_selected" from="UI/Settings/Video/HBoxContainer/VideoButtons/Vsync" to="UI/Settings/Video" method="_on_vsync_item_selected"]
[connection signal="pressed" from="UI/Settings/Video/Back" to="UI/Settings/Video/Back" method="_on_pressed"]
[connection signal="value_changed" from="UI/Settings/Audio/HBoxContainer/AudioControls/Master" to="UI/Settings/Audio" method="_on_master_value_changed"]
[connection signal="value_changed" from="UI/Settings/Audio/HBoxContainer/AudioControls/Music" to="UI/Settings/Audio" method="_on_music_value_changed"]
[connection signal="value_changed" from="UI/Settings/Audio/HBoxContainer/AudioControls/SFX" to="UI/Settings/Audio" method="_on_sfx_value_changed"]
[connection signal="pressed" from="UI/Settings/Audio/Back" to="UI/Settings/Audio/Back" method="_on_pressed"]
[connection signal="pressed" from="UI/Settings/Controls/Back" to="UI/Settings/Controls/Back" method="_on_pressed"]
